// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration/commonjs first render pass has applied the brush 1`] = `
"
        <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\">
          
          <tbody>
            <tr>
              
              <td class=\\"code\\">
                <div class=\\"container\\"><div class=\\"line number1 index0 alt2\\"><code class=\\"test_brush_v4 plain\\">first</code></div></div>
              </td>
            </tr>
          </tbody>
        </table>
      "
`;

exports[`integration/commonjs second render pass has applied the brush 1`] = `
"
        <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\">
          
          <tbody>
            <tr>
              
              <td class=\\"code\\">
                <div class=\\"container\\"><div class=\\"line number1 index0 alt2\\"><code class=\\"test_brush_v4 plain\\">second</code></div></div>
              </td>
            </tr>
          </tbody>
        </table>
      "
`;
